# failure-memory-gridworld

./: .gitignore  CITATION.cff  LICENSE  PUBLIC_REPO_CLEANUP_REPORT.md  README.md  pyproject.toml  requirements.txt
configs/: mazes.py
experiments/: _harness.py  make_figures.py  run_full.py  run_pilot.py
paper/: manuscript.md  references.bib  source_notes.md
release/: abstract.txt  ai_disclosure.txt  keywords.txt  submission_metadata.md
results/: manifest.json  raw_results.csv  summary.csv  summary_by_maze.csv  traces.jsonl
src/fmgw/: agents.py  analysis.py  environment.py  integrity.py  memory.py  metrics.py  policies.py  runner.py
tests/: conftest.py  test_environment.py  test_failure_memory.py  test_metrics.py  test_policy_fairness.py  test_reproducibility.py
