[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "failure-memory-gridworld"
version = "0.1.0"
description = "Lightweight evaluation of failure memory in grid-world navigation agents"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["matplotlib>=3.7", "pandas>=2.0"]

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]
